<resources>
    <string name="app_name">CliCon 5</string>
    <string name="button_login">Войти</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="keep_authorization">Оставаться в системе</string>
    <string name="wrong_password_or_email">Неверный e-mail или пароль</string>
    <string name="double_back_pressed">Please click BACK again to exit</string>
    <string name="promt_fail_to_connect">Нет подключения к серверу</string>

    <string name="promt_menu_home">Домой</string>
    <string name="promt_menu_statistic">Статистика</string>
    <string name="promt_menu_settings">Настройки</string>
    <string name="promt_menu_user">Пользователь</string>

    <string name="promt_popup_menu_edit">Изменить</string>
    <string name="promt_popup_menu_delete">Удалить</string>

    <string name="promt_popup_menu_add_facility">Добавить объект</string>
    <string name="promt_popup_menu_add_device">Добавить устройство</string>

    <string name="dialog_title_add_facility">Добавить объект</string>
    <string name="dialog_title_update_facility">Изменить объект</string>
    <string name="dialog_title_add_device">Добавить устройство</string>
    <string name="dialog_title_update_device">Изменить устройство</string>

    <string name="toast_message_add_device_success">Устройство добавленно</string>
    <string name="toast_message_add_facility_success">Объект добавлен</string>
    <string name="toast_message_update_facility_success">Объект обновлен</string>
    <string name="toast_message_delete_success">Успешно удаленно</string>

    <string name="alert_dialog_title_delete_device">Вы действительно хотите удалить устройство</string>
    <string name="alert_dialog_title_delete_facility">Вы действительно хотите удалить объект</string>
    <string name="alert_dialog_message_delete_facility">В случае удаления объекта, удаляются все закрепленные за ним устройства</string>
    <string name="alert_dialog_message_delete_device">*Устройство можно будет добавить через соответствующее меню</string>

    <string name="toast_message_empty_device_list">Устройства отсутствуют</string>
    <string name="toast_message_empty_facility_list">Объекты отсутствуют</string>

    <!-- Boiler widget fields -->
    <string name="boiler_output_temp">Подача</string>
    <string name="boiler_input_temp">Обратка</string>
    <string name="boiler_fuel_screw_temp">Шнек</string>
    <string name="boiler_pwm">Поддув</string>
    <string name="boiler_burner_temp">Обменник</string>
    <string name="boiler_heat_water_temp">ГВС</string>
    <string name="boiler_mode">режим</string>

    <!--Clicon widgets fields -->
    <string name="clicon_inside_temp">\u2103 t внутри</string>
    <string name="clicon_humidity">Влажность</string>
    <string name="clicon_status_co2">состояние CO2 </string>

    <string name="promt_button_cancel">Отмена</string>
    <string name="promt_button_add">Добавить</string>
    <string name="promt_button_ok">Подтвердить</string>
    <string name="promt_button_neutral_qr">QR</string>

    <string name="promt_error_edittext_length_3">Минимум 3 символа</string>

    <string name="greetings">Добро пожаловать!\nВас приветствует помошник настройки CliCon.</string>
    <string name="clicon_info">
        CliCon - это программное обеспечение,позволяющие следить и управлять климатической составляющей помещений
        как жилых, так и промышленных. CliCon позволяет наблюдать за работой всех объектов,
        подключенных к сиcтеме в режиме “онлайн”, просматривать статистику работы устройств, получать автоматические
        уведомления о тревожных событиях. А также к системе можно подключаться удаленно,
        то есть настраивать приборы отопления, кондиционирования и вентиляции - дистанционно.
    </string>

    <string name="promt_auth_fingerprint">Авторизация Clicon 5</string>

    <string name="you_can_close">*Это окно вы можете вызвать в меню -> “ПОМОЩЬ”</string>
    <string name="title_activity_main">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="promt_add_widgets">Добавить виджет</string>
    <string name="menu_category">Дополнительно</string>
    <string name="menu_devices">Устройства</string>
    <string name="menu_widgets">Виджеты</string>
    <string name="menu_groups">Группы</string>
    <string name="menu_call">Связь</string>
    <string name="menu_statistic">Статистика</string>
    <string name="menu_help">Помощь</string>
    <string name="menu_message">Сообщения</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_exit">Выход</string>

    <string name="promt_widget_camera">Камера</string>
    <string name="promt_widget_boiler">Котел</string>
    <string name="promt_widget_clicon">КлиКон</string>
    <string name="promt_widget_statistic">Статистика</string>
    <string name="promt_widget_weather">Погода</string>

    <string name="promt_setting_first_tab">Данные</string>
    <string name="promt_setting_second_tab">Настройки</string>

    <string name="error_code_unexpected">Неизвесная ошибка</string>
    <string name="error_code10">Неверный логин или пароль | Пользователь не найден</string>
    <string name="error_code11">Пользователь заблокирован</string>
    <string name="hint_create_facility">Имя объекта</string>
    <string name="hint_create_device">Имя устройства</string>
    <string name="hint_chip_id_device">ChipID устройства</string>
    <string name="title_dialog_create_facility">Добавление Объекта</string>
    <string name="title_dialog_create_device">Добавление устройства</string>

    <string name="error_empty_fields">Заполните все поля</string>
    <string name="edt_device_type_hint">Тип устройства</string>
    <string name="edt_facility_list_hint">Объект</string>

    <!-- empty value for textViews -->
    <string name="empty_text_value">--</string>


    <string name="message_device_is_already_added">Ошибка! Устройство уже было добавлено в систему</string>

</resources>
