<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/app_menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/promt_menu_home"
            app:showAsAction="always" />

    <item
            android:id="@+id/app_menu_statistic"
            android:icon="@drawable/ic_statistics"
            android:title="@string/promt_menu_statistic"
            app:showAsAction="always" />

    <item
            android:id="@+id/app_menu_messages"
            android:icon="@drawable/ic_user"
            android:title="@string/promt_menu_user"
            android:visible="true"
            app:showAsAction="always" />

    <item
            android:id="@+id/app_menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/promt_menu_settings"
            app:showAsAction="always" />

</menu>