<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/txt_device_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_text_value" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_new_device_name"
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/ic_text_is_validate"
                app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_new_device_name"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_create_device"
                    android:singleLine="true"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_new_device_chipid"
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/ic_text_is_validate"
                app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_new_device_chipid"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_chip_id_device"
                    android:singleLine="true"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_layout_device_list"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <AutoCompleteTextView
                        android:id="@+id/txtDeviceList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="false"
                        android:editable="false"
                        android:hint="@string/edt_device_type_hint"
                        android:inputType="none"
                        android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_layout_facility_list"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <AutoCompleteTextView
                        android:id="@+id/txtFacilityList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/edt_facility_list_hint"
                        android:inputType="none"
                        android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <ImageView
                android:id="@+id/img_qr_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:minHeight="35dp"
                app:srcCompat="@drawable/ic_qr_scan" />

        <Button
                android:id="@+id/btn_dialog_device_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/promt_button_cancel" />

        <Button
                android:id="@+id/btn_dialog_device_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/promt_button_add" />
    </LinearLayout>

    <FrameLayout
            android:id="@+id/frame_qr_scan"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/background_status_bar"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.camera.view.PreviewView
                android:id="@+id/tx_view_qr_scan"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>