<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HelpActivity" android:background="#292D36">

    <TextView
            android:text="@string/greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textSize="18sp" android:textColor="@android:color/white" android:textAlignment="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/play"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            android:background="@color/help_activity_background_text"/>
    <TextView
            android:text="@string/you_can_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView3" android:textSize="14sp"
            android:textColor="@android:color/white" android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/play"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/clicon_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textColor="@android:color/white" android:textAlignment="textStart" android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/roboto_thin"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:textStyle="bold"
            android:lineSpacingExtra="4sp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:background="@color/help_activity_background_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>