<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <TextView
            android:id="@+id/txt_title_facility_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/facility_textInputLayout"
            style="@style/CustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_create_facility"
            app:endIconDrawable="@drawable/ic_text_is_validate"
            app:endIconMode="custom"
            app:endIconTint="@color/end_icon_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_facility_dialog">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_facility_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facility_textInputLayout">

        <Button
                android:id="@+id/btn_cancel_facility_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/promt_button_cancel" />

        <Button
                android:id="@+id/btn_accept_facility_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/promt_button_add" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>