<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ua.willeco.clicon.ui.AuthorizationActivity" android:background="@drawable/background">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/logo_clicon_rgb"
            android:id="@+id/imageView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <ImageView
            android:id="@+id/img_type_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/ic_local_mode_connection" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:id="@+id/edt_email_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autoText="false"
                android:ems="10"
                android:fontFamily="@font/play"
                android:hint="@string/hint_email"
                android:inputType="textNoSuggestions|text"
                android:text="owner"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color"
                android:theme="@style/MyEditText" />

        <EditText
                android:id="@+id/edt_password_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:fontFamily="@font/play"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="owner"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHighlight="@color/red_button"
                android:textColorHint="@color/hint_color"
                android:textColorLink="@android:color/holo_green_light"
                android:theme="@style/MyEditText" />

    </LinearLayout>

    <ImageView
            android:id="@+id/img_biometric_pass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_submit_auth"
            app:layout_constraintStart_toEndOf="@+id/btn_submit_auth"
            app:layout_constraintTop_toTopOf="@+id/btn_submit_auth"
            app:srcCompat="@drawable/fingerprint_dialog_fp_to_error" />

    <CheckBox
            android:id="@+id/check_save_user_data"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/play"
            android:text="@string/keep_authorization"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:theme="@style/MyCheckboxTheme"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit_auth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
            android:text="@string/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_submit_auth"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="@drawable/rectangle_button" android:textColor="@android:color/white"
            android:textSize="16sp" android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/play"/>

    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit_auth" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@android:color/white" android:cursorVisible="false"
            android:background="@drawable/bottom_line_text_view" android:fontFamily="@font/play"/>

</androidx.constraintlayout.widget.ConstraintLayout>