<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_new_device_name"
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconDrawable="@drawable/ic_text_is_validate"
                app:endIconMode="custom"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_new_device_name"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_create_device"
                    android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_new_device_chipid"
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconDrawable="@drawable/ic_text_is_validate"
                app:endIconMode="custom"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_new_device_chipid"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_chip_id_device"
                    android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <AutoCompleteTextView
                    android:id="@+id/txtRoomList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/promt_popup_menu_edit"
                    android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>